# kyc

./: .gitignore  API_DATA_FLOW.md  API_DOCUMENTATION.md  API_REQUEST_RESPONSE_EXAMPLES.md  Dockerfile  Dockerfile.ml-backend  MEDIAPIPE_FIX.md  Makefile  PRODUCTION_API_ENDPOINTS.md  PRODUCTION_ENDPOINTS_QUICK.md  QUICK_START_GUIDE.md  RAILWAY_DEPLOYMENT_COMPLETE.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  YUNET_CONCURRENT_FIX.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  run.sh  test_api_example.py
api/: api.py  schemas.py
app/services/: blink_detector.py  face_detector_id.py  face_matcher.py  liveness_challenges.py  liveness_detector.py  liveness_utils.py  ocr_extractor.py  profile_detector.py
configs/: config.py  defaults.yaml
scripts/: download_models.py
services/custom-frontend/: Dockerfile  README.md  RUNNING.md  app.js  index.html  liveness.css  liveness.js  package.json  run-local.sh  styles.css
services/frontend/: .railwayignore  .railwayroot  Dockerfile  ballerine-performance.css  ballerine-performance.js  ballerine-sdk.umd.js  ballerine-sdk.umd.js.map  index.html  kyc-flow-integration.js  liveness.css  liveness.html  liveness.js  railway.json  start.sh
services/proxy/: Dockerfile  README.md  package.json  railway.json  server.js
tests/: test_detection_match.py  test_face_detector.py  test_ocr_extractor.py
utils/: logger.py
